@@ -1,35 +1,34 @@
-export("?", CRAN.packages, Rprof,Rprofmem, RShowDoc, RSiteSearch,
-       URLdecode, URLencode, View, alarm, apropos, argsAnywhere,
-       assignInNamespace, as.roman, as.person, as.personList,
-       as.relistable, available.packages, browseEnv, browseURL,
-       browseVignettes, bug.report, capture.output, checkCRAN,
-       chooseCRANmirror, citation, citEntry, citHeader, citFooter,
-       close.socket, combn, compareVersion, contrib.url, count.fields,
-       data, data.entry, dataentry, de, de.ncols, de.restore,
-       de.setup, debugger, demo, download.file, download.packages,
-       dump.frames, edit, emacs, example, file_test, file.edit, find,
-       fix, fixInNamespace, findLineNum, flush.console, formatOL,
-       formatUL, getAnywhere, getCRANmirrors, getFromNamespace,
-       getS3method, glob2rx, head, head.matrix, help, help.request,
-       help.search, help.start, history, index.search,
-       install.packages, installed.packages, is.relistable,
+export("?", .DollarNames, CRAN.packages, Rprof, Rprofmem, RShowDoc,
+       RSiteSearch, URLdecode, URLencode, View, alarm, apropos,
+       argsAnywhere, assignInNamespace, as.roman, as.person,
+       as.personList, as.relistable, aspell, available.packages,
+       browseEnv, browseURL, browseVignettes, bug.report,
+       capture.output, checkCRAN, chooseCRANmirror, citation,
+       citEntry, citHeader, citFooter, close.socket, combn,
+       compareVersion, contrib.url, count.fields, data, data.entry,
+       dataentry, de, de.ncols, de.restore, de.setup, debugger, demo,
+       download.file, download.packages, dump.frames, edit, emacs,
+       example, file_test, file.edit, find, fix, fixInNamespace,
+       findLineNum, flush.console, formatOL, formatUL, getAnywhere,
+       getCRANmirrors, getFromNamespace, getS3method, glob2rx, head,
+       head.matrix, help, help.request, help.search, help.start,
+       history, install.packages, installed.packages, is.relistable,
        limitedLabels, loadhistory, localeToCharset, ls.str, lsf.str,
        make.packages.html, make.socket, memory.limit, memory.size,
-       menu, methods, mirror2html, modifyList, new.packages,
+       menu, methods, mirror2html, modifyList, new.packages, news,
        normalizePath, object.size, old.packages, package.contents,
        package.skeleton, packageDescription, packageStatus, page,
        person, personList, pico, prompt, promptData, promptPackage,
-       rc.getOption, rc.options, rc.settings, rc.status, .DollarNames,
+       rc.getOption, rc.options, rc.settings, rc.status,
        readCitationFile, read.DIF, read.csv, read.csv2, read.delim,
        read.delim2, read.fwf, read.fortran, read.socket, read.table,
-       recover, relist, remove.packages, savehistory, select.list,
-       sessionInfo, setBreakpoint, setRepositories, stack, str,
-       strOptions, summaryRprof, tail, tail.matrix, tar, timestamp,
-       toBibtex, toLatex, type.convert, unstack, untar, unzip,
-       update.packageStatus, update.packages, upgrade, url.show, vi,
-       vignette, write.csv, write.csv2, write.socket, write.table,
-       wsbrowser, xedit, xemacs, zip.file.extract, rtags, aspell,
-       news)
+       recover, relist, remove.packages, rtags, savehistory,
+       select.list, sessionInfo, setBreakpoint, setRepositories,
+       stack, str, strOptions, summaryRprof, tail, tail.matrix, tar,
+       timestamp, toBibtex, toLatex, type.convert, unstack, untar,
+       unzip, update.packageStatus, update.packages, upgrade,
+       url.show, vi, vignette, write.csv, write.csv2, write.socket,
+       write.table, wsbrowser, xedit, xemacs, zip.file.extract)
 
 export(txtProgressBar, getTxtProgressBar, setTxtProgressBar)
 
