@@ -753,7 +753,7 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"tempdir", do_tempdir, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"R.home", do_Rhome, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"date", do_date, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
-    {"index.search", do_indexsearch, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
+    {"index.search", do_indexsearch, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"Sys.getenv", do_getenv, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"Sys.setenv", do_setenv, 0, 111, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"Sys.unsetenv", do_unsetenv, 0, 111, 1, {PP_FUNCALL, PREC_FN, 0}},
