@@ -1168,9 +1168,10 @@ static int filbuf(char *buf, FILE *fp)
 
 SEXP attribute_hidden do_indexsearch(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
-    /* index.search(topic, path, file, .Platform$file.sep, type) */
-    SEXP topic, path, indexname, sep, type;
-    char linebuf[256], topicbuf[256], *p, ctype[256];
+    /* index.search(topic, path, file, .Platform$file.sep) */
+    SEXP topic, path, sep;
+    char linebuf[256], topicbuf[256], *p;
+    const char *csep;
     int i, npath, ltopicbuf;
     FILE *fp;
 
@@ -1183,26 +1184,17 @@ SEXP attribute_hidden do_indexsearch(SEXP call, SEXP op, SEXP args, SEXP rho)
     args = CDR(args);
     if (!isString(path) || length(path) < 1 || isNull(path))
         error(_("invalid '%s' argument"), "path");
-    indexname = CAR(args);
-    args = CDR(args);
-    if (!isString(indexname) || length(indexname) < 1 || isNull(indexname))
-        error(_("invalid '%s' argument"), "indexname");
     sep = CAR(args);
-    args = CDR(args);
     if (!isString(sep) || length(sep) < 1 || isNull(sep))
         error(_("invalid '%s' argument"), "sep");
-    type = CAR(args);
-    if (!isString(type) || length(type) < 1 || isNull(type))
-        error(_("invalid '%s' argument"), "type");
-    strcpy(ctype, CHAR(STRING_ELT(type, 0)));
+    csep = CHAR(STRING_ELT(sep, 0));
     snprintf(topicbuf, 256, "%s\t", translateChar(STRING_ELT(topic, 0)));
     ltopicbuf = strlen(topicbuf);
     npath = length(path);
     for (i = 0; i < npath; i++)
     {
-        snprintf(linebuf, 256, "%s%s%s%s%s", translateChar(STRING_ELT(path, i)), CHAR(STRING_ELT(sep, 0)), "help",
-                 CHAR(STRING_ELT(sep, 0)), CHAR(STRING_ELT(indexname, 0)));
-        if ((fp = R_fopen(R_ExpandFileName(linebuf), "rt")) != NULL)
+        snprintf(linebuf, 256, "%s%s%s%s%s", translateChar(STRING_ELT(path, i)), csep, "help", csep, "AnIndex");
+        if ((fp = R_fopen(R_ExpandFileName(linebuf), "rt")))
         {
             while (filbuf(linebuf, fp))
             {
@@ -1212,18 +1204,7 @@ SEXP attribute_hidden do_indexsearch(SEXP call, SEXP op, SEXP args, SEXP rho)
                     while (isspace((int)*p))
                         p++;
                     fclose(fp);
-                    if (!strcmp(ctype, "html"))
-                        snprintf(topicbuf, 256, "%s%s%s%s%s%s", translateChar(STRING_ELT(path, i)),
-                                 CHAR(STRING_ELT(sep, 0)), "html", CHAR(STRING_ELT(sep, 0)), p, ".html");
-                    else if (!strcmp(ctype, "R-ex"))
-                        snprintf(topicbuf, 256, "%s%s%s%s%s%s", translateChar(STRING_ELT(path, i)),
-                                 CHAR(STRING_ELT(sep, 0)), "R-ex", CHAR(STRING_ELT(sep, 0)), p, ".R");
-                    else if (!strcmp(ctype, "latex"))
-                        snprintf(topicbuf, 256, "%s%s%s%s%s%s", translateChar(STRING_ELT(path, i)),
-                                 CHAR(STRING_ELT(sep, 0)), "latex", CHAR(STRING_ELT(sep, 0)), p, ".tex");
-                    else /* type = "help" */
-                        snprintf(topicbuf, 256, "%s%s%s%s%s", translateChar(STRING_ELT(path, i)),
-                                 CHAR(STRING_ELT(sep, 0)), ctype, CHAR(STRING_ELT(sep, 0)), p);
+                    snprintf(topicbuf, 256, "%s%s%s%s%s", translateChar(STRING_ELT(path, i)), csep, "help", csep, p);
                     return mkString(topicbuf);
                 }
             }
